src/test/ui/rfc-2005-default-binding-mode/slice.stderr
error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/slice.rs:6:11
   |
LL |     match sl {
   |           ^^ pattern `&[]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
